# job-search-tool

./: Cargo.toml
src/: main.rs
tailwindcss-compiler/: package.json  tailwind.config.js
templates/: index.hbs
