[package]
name = "job-search-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
handlebars = { version = "6.2.0", features = ["dir_source"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.19"
